# stock-stading

./: .gitignore  Dockerfile  F-F_Research_Data_5_Factors_2x3.txt  Makefile  README.md  conf.yaml  debug.log.2023-01-29_18  debug.log.2023-02-01_14  debug.log.2023-02-01_15  debug.log.2023-02-02_19  debug.log.2023-02-03_10  docker-compose.yml  env.list  ff.csv  logging.ini  pyproject.toml  returns.csv
.github/workflows/: pipeline.yml
clientportal.gw/root/: conf.yaml
common/: __init__.py  calculations.py  database.py  db.py  dt.py  ib.py  interactive_brokers.py  models.py  postgres.py  rest.py  sql_queries.py  sqlite.py  yfinanceapi.py
data/: market-data-history.json  stock.json
migration/: tables.py
render/: app.py  style.py
render/pages/: efficient_frontier.py  home.py  portfolio_analysis.py
src/: etl.py
src/analysis/: ef.ipynb  ef2.ipynb  efficient_frontier.py  monte_carlo.py  portfolio_analysis.py  stock_returns.py
src/portfolio/: portfolio.py  portoflio.py
stock-trading/: __init__.py  etl.py  main.py
stock_trading/: __init__.py  etl.py  main.py  portfolio_analysis.py
stock_trading/portfolio/: ib_account.py
terraform/: create_s3_backend.py  main.tf  output.tf  provider.tf  terraform.out  variables.tf
terraform/.terraform/modules/: modules.json
tests/: test_stock_trading.py
