[tool.poetry]
name = "stock-trading"
version = "0.1.0"
description = ""
authors = ["Jelle Vegter <jelle.vegter@nederlandseloterij.nl>"]
packages = [
    { include = "common" },
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
db-sqlite3 = "^0.0.1"
pandas = "^1.5.2"
lxml = "^4.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
